--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "firebase": "^9.20.0",
+    "firebase-tools": "^11.29.0",
     "google-fonts-loader": "^1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -13,6 +15,7 @@
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2",
     "styled-components": "^5.3.9",
     "web-vitals": "^2.1.4"
   },
