--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "google-fonts-loader": "^1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-player": "^2.12.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
